; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_spear_adc.c_spear_adc_configure.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_spear_adc.c_spear_adc_configure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spear_adc_state = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spear_adc_state*)* @spear_adc_configure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spear_adc_configure(%struct.spear_adc_state* %0) #0 {
  %2 = alloca %struct.spear_adc_state*, align 8
  %3 = alloca i32, align 4
  store %struct.spear_adc_state* %0, %struct.spear_adc_state** %2, align 8
  %4 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %5 = call i32 @spear_adc_set_status(%struct.spear_adc_state* %4, i32 0)
  %6 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %7 = getelementptr inbounds %struct.spear_adc_state, %struct.spear_adc_state* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = call i32 @__raw_writel(i32 0, i32* %9)
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %18, %1
  %12 = load i32, i32* %3, align 4
  %13 = icmp slt i32 %12, 8
  br i1 %13, label %14, label %21

14:                                               ; preds = %11
  %15 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @spear_adc_set_ctrl(%struct.spear_adc_state* %15, i32 %16, i32 0)
  br label %18

18:                                               ; preds = %14
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %3, align 4
  br label %11

21:                                               ; preds = %11
  %22 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %23 = call i32 @spear_adc_set_scanrate(%struct.spear_adc_state* %22, i32 0)
  %24 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %25 = load %struct.spear_adc_state*, %struct.spear_adc_state** %2, align 8
  %26 = getelementptr inbounds %struct.spear_adc_state, %struct.spear_adc_state* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @spear_adc_set_clk(%struct.spear_adc_state* %24, i32 %27)
  ret i32 0
}

declare dso_local i32 @spear_adc_set_status(%struct.spear_adc_state*, i32) #1

declare dso_local i32 @__raw_writel(i32, i32*) #1

declare dso_local i32 @spear_adc_set_ctrl(%struct.spear_adc_state*, i32, i32) #1

declare dso_local i32 @spear_adc_set_scanrate(%struct.spear_adc_state*, i32) #1

declare dso_local i32 @spear_adc_set_clk(%struct.spear_adc_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
